Adding link to learn angular-formly

--- a/app/states/root/index.html
+++ b/app/states/root/index.html
@@ -14,6 +14,8 @@
         <p class="left-nav-title">Links</p>
         <a href="http://docs.angular-formly.com">Documentation</a>
         <br/>
+        <a href="http://docs.angular-formly.com/docs/learn-angular-formly">Learn angular-formly</a>
+        <br/>
         <a fd-event-navigate="showUsers">Who uses angular-formly?</a>
         <hr/>
         <p class="left-nav-title">Examples</p>
