--- a/app/states/root/children/default/index.html
+++ b/app/states/root/children/default/index.html
@@ -105,7 +105,7 @@
     <hr/>
 
     <div class="+font-size-large">
-      So take a look around and catch us on <a ng-href="{{::vm.base()}}'">GitHub</a>
+      So take a look around and catch us on <a ng-href="{{::vm.base()}}">GitHub</a>
     </div>
 
   </div>
