Moving get help link

--- a/app/states/root/index.html
+++ b/app/states/root/index.html
@@ -16,6 +16,8 @@
         <br/>
         <a href="http://docs.angular-formly.com/docs/learn-angular-formly">Learn angular-formly</a>
         <br/>
+        <a href="http://help.angular-formly.com">Get Help</a>
+        <br/>
         <a fd-event-navigate="showUsers">Who uses angular-formly?</a>
         <hr/>
         <p class="left-nav-title">Examples</p>
