--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <meta name="author" content="Kent C. Dodds" />
   <meta name="keywords" content="angular forms,angularjs forms,json forms,angularjs json forms,angular-formly," />
   <meta name="description" content="angular-formly: JavaScript Powered Forms for AngularJS" />
+  <!-- BEGIN TRACKJS -->
+  <script type="text/javascript">window._trackJs = { token: 'cc1aefaac33f4c48a589ede51e0ee5de' };</script>
+  <script type="text/javascript" src="https://d2zah9y47r7bi2.cloudfront.net/releases/current/tracker.js"></script>
+  <!-- END TRACKJS -->
   <style>
     .ng-cloak {display: none;}
     body {"Helvetica Neue", Helvetica, Arial, sans-serif}
@@ -33,14 +37,6 @@
 
 <script src="bundle.js"></script>
 
-<script>
-  // make errors longer...
-  window.onerror = function (errorMsg, url, lineNumber, columnNumber, errorObject) {
-    if (/<omitted>/.test(errorMsg)) {
-      console.error('Error: ' + errorObject ? errorObject.message : errorMsg);
-    }
-  };
-</script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
