Add finicial support link

--- a/app/states/root/index.html
+++ b/app/states/root/index.html
@@ -22,6 +22,8 @@
         <hr/>
         <p class="left-nav-title">Examples</p>
         <fd-example-search examples="vm.examples"></fd-example-search>
+        <hr />
+        <a href="https://github.com/formly-js/angular-formly#financial-support">$upport angular-formly</a>
       </div>
       <div class="col-sm-9 main-ui-view">
         <div ui-view></div>
