--- a/app/states/root/children/users/index.html
+++ b/app/states/root/children/users/index.html
@@ -3,9 +3,7 @@
     <div ng-repeat="user in vm.users" class="user">
       <a fd-event-navigate="showUserDescription(user)">
         <fd-user-logo logo="user.logo" shrink="vm.inDetails()" center-vertically="true"></fd-user-logo>
-        <div>
-          <strong>{{user.name}}</strong>
-        </div>
+        <div class="user-name">{{user.name}}</div>
       </a>
     </div>
   </div>
