update: Add link for Angular 2 Formly

--- a/app/states/root/index.html
+++ b/app/states/root/index.html
@@ -19,6 +19,8 @@
         <a href="http://help.angular-formly.com">Get Help</a>
         <br/>
         <a fd-event-navigate="showUsers">Who uses angular-formly?</a>
+        <br/>
+        <a href="https://ng2.angular-formly.com">Formly for Angular 2</a>
         <hr/>
         <p class="left-nav-title">Examples</p>
         <fd-example-search examples="vm.examples"></fd-example-search>
