--- a/app/states/root/index.html
+++ b/app/states/root/index.html
@@ -29,6 +29,8 @@
       </div>
       <div class="col-sm-9 main-ui-view">
         <div ui-view></div>
+        <hr />
+        <a href="https://app.codesponsor.io/link/PKGFLnhDiFvsUA5P4kAXfiPs/formly-js/angular-formly" rel="nofollow"><img src="https://app.codesponsor.io/embed/PKGFLnhDiFvsUA5P4kAXfiPs/formly-js/angular-formly.svg" style="width: 888px; height: 68px;" alt="Sponsor" /></a>
       </div>
     </div>
   </div>
