--- a/app/states/root/index.html
+++ b/app/states/root/index.html
@@ -20,7 +20,7 @@
         <br/>
         <a fd-event-navigate="showUsers">Who uses angular-formly?</a>
         <br/>
-        <a href="https://ng2.angular-formly.com">Formly for Angular 2</a>
+        <a href="https://formly-js.github.io/ngx-formly">Formly for Angular 2</a>
         <hr/>
         <p class="left-nav-title">Examples</p>
         <fd-example-search examples="vm.examples"></fd-example-search>
